<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>temporal_decay_obstacle_layer</name>
  <version>0.1.0</version>
  <description>
    A custom Nav2 costmap layer with temporal decay and intensity-based clearing control.
    Useful for camera-based obstacle detection with limited FOV.
  </description>

  <maintainer email="sandeep@harmony-robotics.com">Sandeep Dutta</maintainer>
  <license>BSD-3-Clause</license>

  <url type="repository">https://github.com/jeeves/temporal_decay_obstacle_layer</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>nav2_costmap_2d</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pluginlib</depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf2_sensor_msgs</build_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2_sensor_msgs</exec_depend>

  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
